Added API's, SQL data source and refactored code with tests