@@ -1,25 +1,25 @@
+package entity;
+
+import com.example.restaurant.entity.Restaurant;
+import com.example.restaurant.exception.ItemNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.time.LocalTime;
-import java.util.List;
+import java.util.Arrays;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 class RestaurantTest {
     Restaurant restaurant;
-    //REFACTOR ALL THE REPEATED LINES OF CODE
 
     @BeforeEach
     void setup(){
         createRestaurant();
     }
-    //>>>>>>>>>>>>>>>>>>>>>>>>>OPEN/CLOSED<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
-    //-------FOR THE 2 TESTS BELOW, YOU MAY USE THE CONCEPT OF MOCKING, IF YOU RUN INTO ANY TROUBLE
 
     @Test
     public void is_restaurant_open_should_return_true_if_time_is_between_opening_and_closing_time(){
-        //WRITE UNIT TEST CASE HERE
         restaurant.openingTime = LocalTime.now().minusMinutes(60);
         restaurant.closingTime = LocalTime.now().plusMinutes(60);
         assertTrue(restaurant.isRestaurantOpen());
@@ -33,19 +33,15 @@ class RestaurantTest {
         assertFalse(restaurant.isRestaurantOpen());
     }
 
-    //<<<<<<<<<<<<<<<<<<<<<<<<<OPEN/CLOSED>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
-
-
-    //>>>>>>>>>>>>>>>>>>>>>>>>>>>MENU<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<
     @Test
     public void adding_item_to_menu_should_increase_menu_size_by_1(){
-
         int initialMenuSize = restaurant.getMenu().size();
         restaurant.addToMenu("Sizzling brownie",319);
         assertEquals(initialMenuSize+1,restaurant.getMenu().size());
     }
+
     @Test
-    public void removing_item_from_menu_should_decrease_menu_size_by_1() throws itemNotFoundException {
+    public void removing_item_from_menu_should_decrease_menu_size_by_1() throws ItemNotFoundException {
 
         int initialMenuSize = restaurant.getMenu().size();
         restaurant.removeFromMenu("Vegetable lasagne");
@@ -54,23 +50,23 @@ class RestaurantTest {
     @Test
     public void removing_item_that_does_not_exist_should_throw_exception() {
 
-        assertThrows(itemNotFoundException.class,
+        assertThrows(ItemNotFoundException.class,
                 ()->restaurant.removeFromMenu("French fries"));
     }
 
     private void createRestaurant() {
         LocalTime openingTime = LocalTime.parse("10:30:00");
         LocalTime closingTime = LocalTime.parse("22:00:00");
-        restaurant =new Restaurant("Amelie's cafe","Chennai",openingTime,closingTime);
+        restaurant =new Restaurant("Amelie's cafe","Chennai",openingTime,
+                closingTime);
         restaurant.addToMenu("Sweet corn soup",119);
         restaurant.addToMenu("Vegetable lasagne", 269);
     }
-    //<<<<<<<<<<<<<<<<<<<<<<<MENU>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
 
 
     @Test
     void cost_value_should_be_388(){
-        Integer actualCost = restaurant.getCost(List.of("Sweet corn soup", "Vegetable lasagne"));
+        Integer actualCost = restaurant.getCost(Arrays.asList("Sweet corn soup", "Vegetable lasagne"));
         assertEquals(388, actualCost);
     }
 }
